Implement --add-reads and use it to make library-support read ALL_UNNAMED